--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,32 @@
     margin: 0;
     padding: 0;
 }
+
+html {
+    font-size: 25px;
+}
+
+.game_container {
+    display: flex;
+    background-color: pink;
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+}
+
+img {
+    width: 6rem;
+}
+
+#playerTurn {
+    width: 6rem;
+    height: 1.5rem;
+    font-size: 1rem;
+}
+
+
+#reset {
+    width: 3rem;
+    height: 1.5rem;
+    font-size: 1rem;
+}
