--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 
 html {
     font-size: 24px;
+    background-color: #b7e2fe;
 
     @media only screen and (min-width: 481px) {
         font-size: 25px;
@@ -19,12 +20,12 @@ html {
     background-color: #b7e2fe;
     flex-direction: column;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     align-items: center; 
 }
 
 img {
-    width: 7rem;
+    width: 6rem;
 
     @media only screen and (min-width: 481px) {
         width: 20rem;
@@ -32,7 +33,7 @@ img {
 }
 
 #images {
-    margin-top: 12rem;
+    margin-top: 9rem;
 
     @media only screen and (min-width: 481px) {
         margin-top: 6rem;
@@ -83,7 +84,7 @@ img {
 
 #instructions {
     margin-top: 5rem;
-    margin-bottom: 3rem;
+    margin-bottom: 1.5rem;
 
     @media only screen and (min-width: 481px) {
         margin-top: 3rem;
@@ -96,8 +97,14 @@ img {
 }
 
 #reset {
-    width: 3rem;
+    width: 4rem;
     height: 1.5rem;
     font-size: 1rem;
     margin-top: 1rem;
+    
+    @media only screen and (min-width: 481px) {
+        width: 3rem;
+        font-size: 1rem;
+    }
+
 }
